[gd_scene load_steps=2 format=3 uid="uid://chal7vradny5q"]

[ext_resource type="Script" path="res://scripts/editor/popup_set_map_size_window.gd" id="1_qhie8"]

[node name="Window" type="Window"]
process_mode = 3
title = "Set Map Size"
position = Vector2i(0, 36)
size = Vector2i(400, 200)
script = ExtResource("1_qhie8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_right = 74.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="SetRowLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Set Rows (3-20):"

[node name="SetRowSpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = 3.0
max_value = 20.0
value = 10.0

[node name="SetColLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Set Columns (3-30):"

[node name="SetColSpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = 3.0
max_value = 30.0
value = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="OK" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
